tests/rosetta/out/Python/15-puzzle-game.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/15-puzzle-game.mochi:91:5: unexpected token "}" (expected PostfixExpr)
  --> /workspace/mochi/tests/rosetta/x/Mochi/15-puzzle-game.mochi:91:5

 91 |     } else {
    |     ^

help:
  Parse error occurred. Check syntax near this location.